[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed_learning_simulation"
version = "0.2"
requires-python = ">=3.12"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
{name = "cyy", email = "cyyever@outlook.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dependencies=[
  "cyy_torch_toolbox@git+https://github.com/cyyever/torch_toolbox.git@main",
  "cyy_torch_algorithm@git+https://github.com/cyyever/torch_algorithm.git@main",
]

[tool.setuptools.package-data]
distributed_learning_simulation= ["py.typed"]

[tool.setuptools.package-dir]
distributed_learning_simulation= "simulation_lib"

[project.urls]
Repository = "https://github.com/cyyever/distributed_learning_simulation_lib"

[tool.pyright]
include = ["simulation_lib"]


[tool.ruff]
target-version = "py312"
src = ["simulation_lib"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # Pylint
  "PL"
]
ignore = ["F401","E501","F403"]
